--- a/calculate-store.html
+++ b/calculate-store.html
@@ -154,7 +154,7 @@
 					<div>一键拨号</div>
 				</li>
 				<li class="bg3" style="line-height: 50px;position: relative; top: -15px; left: 15px;">
-				<a href="pay.html">
+				<a href="calculate-pay.html">
 					<div>立即购买</div>
 				</a>
 				</li>
