--- a/strategy.html
+++ b/strategy.html
@@ -26,6 +26,7 @@
 		<link rel="stylesheet" media="screen and (max-width:500px)" href="style.css">
 		<link rel="stylesheet" type="text/css" href="YSG.css/public.css"/>
 		<style type="text/css">
+			
 			.box-one{
 				width: 345px;
 				height: 165px;
@@ -49,7 +50,7 @@
 		<div class="head">
 			攻略
 		</div>
-		<a href="#">
+		<a href="strategy-content.html">
 			<div class="box-one bg1 overflow0">
 				<div class="color1 font15 overflow1">
 					标题标题标题标题标题标题标题标题内容内容内容内容内容内容内容内容内容内容
@@ -68,7 +69,7 @@
 				</div>
 			</div>
 		</a>
-		<a href="#">
+		<a href="strategy-content.html">
 			<div class="box-one bg1 overflow0">
 				<div class="color1 font15 overflow1">
 					标题标题标题标题标题标题标题标题内容内容内容内容内容内容内容内容内容内容
