--- a/user.html
+++ b/user.html
@@ -64,7 +64,7 @@
 						我的收益
 					</li>
 				</a>
-				<a href="code.html" class="color1 font14" style="position: relative;">
+				<a href="oder-one.html" class="color1 font14" style="position: relative;">
 					<div class="ilblock" style="position: absolute;top: 12px;left: 17px;"  >
 						<img src="imgs/about-icon2.png" style="width: 14px;" />
 					</div>
@@ -72,7 +72,7 @@
 						我的订单
 					</li>
 				</a>
-				<a class="color1 font14" href="course.html" style="position: relative;">
+				<a class="color1 font14" href="store-login.html" style="position: relative;">
 					<div class="ilblock" style="position: absolute;top: 12px;left: 17px;"  >
 						<img src="imgs/about-icon3.png" style="width: 16px;" />
 					</div>
