--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			</div>
 			<div class="font13 color1 ilblock">名称名称</div>
 		</div>
-		<a href="#">
+		<a href="store.html">
 			<div class="bg1 big-box radiu7" style="margin-top: 0px;">
 				<div class="box-top">
 					<img src="imgs/home-img1.png" />
@@ -53,7 +53,7 @@
 			</div>
 		</a>
 		
-		<a href="#">
+		<a href="store.html">
 			<div class="bg1 big-box radiu7">
 				<div class="box-top">
 					<img src="imgs/home-img1.png" />
