--- a/income.html
+++ b/income.html
@@ -28,8 +28,8 @@
 		<style type="text/css">
 			.top {
 				width: 100%;
-				height: 137px;
-				padding-top: 40px;
+				height: 184px;
+				padding-top: 76px;
 			}
 
 			.list-item {
@@ -47,6 +47,16 @@
 			.img-box img {
 				width: 40px;
 				height: 40px;
+			}
+			.name{
+				line-height: 36px; 
+				position: relative;
+				top:7px;
+			}
+			.time{
+				overflow: hidden;
+				position: relative;
+				top: 2px;
 			}
 		</style>
 	</head>
@@ -80,8 +90,8 @@
 						<img :src="item.merchant.headImgUrl" />
 					</div>
 					<div class="ilblock " style="color: rgb(153,153,153);">
-						<div class="color3" style="line-height: 32px;">{{item.merchant.nickname}}</div>
-						<div class="color2">{{item.create_time}}</div>
+						<div class="color3 font12 name">{{item.merchant.nickname}}</div>
+						<div class="color2 font10 time">{{item.create_time}}</div>
 					</div>
 				</div>
 				<div class="ilblock flo-left font13 color3" style="width: 35%; text-align: center;">
